--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "Switcheroo",
     "description" : "Fuzzy-navigate between open tabs",
-    "version" : "0.0.2",
+    "version" : "0.0.3",
 
     "background" : {
         "scripts" : ["src/background.js"],
@@ -18,6 +18,9 @@
     },
 
     "permissions" : ["activeTab", "tabs"],
+    "web_accessible_resources": [
+        "src/content/style.css"
+    ],
 
     "manifest_version" : 2
 }
