--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,12 @@
 
     "browser_action": {
         "default_title": "Switcheroo",
-        "default_popup": "src/popup/popup.html"
+        "default_popup": "src/popup/popup.html",
+
+        "default_icon": {
+            "19": "icons/icon19.png",
+            "38": "icons/icon38.png"
+        }
     },
 
     "commands" : {
@@ -18,6 +23,12 @@
     },
 
     "permissions" : ["tabs"],
+
+    "icons": {
+        "19": "icons/icon19.png",
+        "38": "icons/icon38.png",
+        "48": "icons/icon48.png"
+    },
 
     "manifest_version" : 2
 }
